--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@apollo/react-hooks": "^3.1.3",
+		"@apollo/react-testing": "^3.1.3",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
+		"apollo-boost": "^0.4.7",
 		"bulma": "^0.8.0",
+		"cross-fetch": "^3.0.4",
+		"dotenv": "^8.2.0",
 		"eslint": "^6.8.0",
 		"eslint-plugin-prettier": "^3.1.2",
 		"evergreen-ui": "^4.23.0",
 		"gh-pages": "^2.2.0",
+		"graphql": "^14.6.0",
 		"husky": "^4.2.3",
 		"prettier": "^1.19.1",
 		"react": "^16.13.1",
+		"react-apollo": "^3.1.3",
 		"react-dom": "^16.13.1",
 		"react-scripts": "3.4.1"
 	},
