--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@apollo/client": "^3.0.0-beta.41",
+		"@apollo/react-components": "^3.1.3",
+		"@apollo/react-hoc": "^3.1.3",
 		"@apollo/react-hooks": "^3.1.3",
+		"@apollo/react-ssr": "^3.1.3",
 		"@apollo/react-testing": "^3.1.3",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
