display data hooks

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
 		"apollo-boost": "^0.4.7",
+		"apollo-cache-inmemory": "^1.6.5",
+		"apollo-link-context": "^1.0.19",
+		"apollo-link-http": "^1.5.16",
 		"bulma": "^0.8.0",
 		"cross-fetch": "^3.0.4",
 		"dotenv": "^8.2.0",
