--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@apollo/client": "^3.0.0-beta.41",
-		"@apollo/react-components": "^3.1.3",
-		"@apollo/react-hoc": "^3.1.3",
 		"@apollo/react-hooks": "^3.1.3",
-		"@apollo/react-ssr": "^3.1.3",
-		"@apollo/react-testing": "^3.1.3",
+		"@material-ui/core": "^4.9.7",
+		"@material-ui/icons": "^4.9.1",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
@@ -16,20 +13,16 @@
 		"apollo-cache-inmemory": "^1.6.5",
 		"apollo-link-context": "^1.0.19",
 		"apollo-link-http": "^1.5.16",
-		"bulma": "^0.8.0",
-		"cross-fetch": "^3.0.4",
-		"dotenv": "^8.2.0",
+		"graphql": "^14.6.0",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"react-scripts": "3.4.1",
 		"eslint": "^6.8.0",
 		"eslint-plugin-prettier": "^3.1.2",
 		"evergreen-ui": "^4.23.0",
-		"gh-pages": "^2.2.0",
-		"graphql": "^14.6.0",
 		"husky": "^4.2.3",
-		"prettier": "^1.19.1",
-		"react": "^16.13.1",
-		"react-apollo": "^3.1.3",
-		"react-dom": "^16.13.1",
-		"react-scripts": "3.4.1"
+		"material-ui-icons": "^1.0.0-beta.36",
+		"prettier": "^1.19.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -56,12 +49,6 @@
 		]
 	},
 	"devDependencies": {
-		"electron": "^8.1.1",
-		"@babel/core": "^7.8.7",
-		"@babel/preset-env": "^7.8.7",
-		"@babel/preset-react": "^7.8.3",
-		"babel-loader": "^8.0.6",
-		"css-loader": "^3.4.2",
-		"html-loader": "^0.5.5"
+		"electron": "^8.1.1"
 	}
 }
