--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-	"name": "sourcerer",
+	"name": "cross-sourcerer",
 	"version": "0.1.0",
 	"private": true,
+	"homepage": "https://ipicky22.github.io/cross-sourcerer/",
 	"dependencies": {
 		"@apollo/react-hooks": "^3.1.3",
 		"@material-ui/core": "^4.9.7",
@@ -13,15 +14,16 @@
 		"apollo-cache-inmemory": "^1.6.5",
 		"apollo-link-context": "^1.0.19",
 		"apollo-link-http": "^1.5.16",
-		"graphql": "^14.6.0",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
-		"react-scripts": "3.4.1",
 		"eslint": "^6.8.0",
 		"eslint-plugin-prettier": "^3.1.2",
 		"evergreen-ui": "^4.23.0",
+		"gh-pages": "^2.2.0",
+		"graphql": "^14.6.0",
 		"husky": "^4.2.3",
-		"prettier": "^1.19.1"
+		"prettier": "^1.19.1",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"react-scripts": "3.4.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
