--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"build": "react-scripts build",
 		"lint": "eslint 'src/**/*.js*'",
 		"prettier": "prettier --check 'src/**/*.js*'",
-		"electron": "electron ./src/platform/desktop/main.js"
+		"electron": "electron ./src/platform/desktop/main.js",
+		"buildElectron": "electron-packager ./src/platform/desktop/main.js sourcerer --platform=win32 --arch=x86_64"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -48,6 +49,7 @@
 		]
 	},
 	"devDependencies": {
-		"electron": "^8.1.1"
+		"electron": "^8.1.1",
+		"electron-packager": "^14.2.1"
 	}
 }
